# SurveyEase

./: README.md
se-backend/: .gitignore  main.py  pyproject.toml
se-backend/api/: host.py  survey.py  template.py
se-backend/cfg/: environment.py  setting.py
se-backend/constants/: providers.py
se-backend/database/: __init__.py  connection.py  init.sql  models.py
se-backend/graph/: survey_graph.py
se-backend/llm_provider/: base.py
se-backend/memory/: embeddings.py
se-backend/scripts/: start.sh  start_uvicorn.sh
se-backend/services/: chat_service.py  service_manager.py
se-backend/template/: example.host_config.json  example.survey_template.json  survey_template.json
se-backend/utils/: chat_logger.py  json_utils.py  redis_checkpointer.py  unified_logger.py
se-frontend/: index.html  package-lock.json  package.json  server.js  vite.config.ts
se-frontend/src/: App.css  App.tsx  index.css
se-frontend/src/components/: ChatHistory.css  ChatHistory.tsx  ChatWindow.css  ChatWindow.tsx  HostConfig.css  HostConfig.tsx  MessageBubble.css  MessageBubble.tsx  SurveyConfig.css  SurveyConfig.tsx
se-frontend/src/hooks/: useSurvey.ts
se-frontend/src/services/: api.ts
se-frontend/src/types/: index.ts
se-frontend/src/utils/: index.ts
